Added Presto docker config